--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,24 @@
-title:            Site Title
-description:      Describe your website here.
-disqus_shortname: 
+title:            M.T Davis
+description:      Where I Put things...
+disqus_shortname: mtdavis
 reading_time:     true
 words_per_minute: 200
 # Your site's domain goes here (eg: //mmistakes.github.io, http://mademistakes.com, etc)
 # When testing locally leave blank or use http://localhost:4000
-url:
+url: 
 
 # Owner/author information
 owner:
-  name:           Your Name
+  name:           M.T Davis
   avatar:         avatar.jpg
-  bio:            "Your bio goes here. It shouldn't be super long but a good two sentences or two should suffice."
-  email:          you@email.com
+  bio:            "Rubyist, Writer, All Around Coder and Tech Geek"
+  email:          Marquese T. Davis
   # Social networking links used in footer. Update and remove as you like.
-  twitter:        
+  twitter: mtdavis00        
   facebook:       
-  github:         
+  github: mt-davis     
   stackexchange:  
-  linkedin:       
+  linkedin: marquesedavis      
   instagram:      
   flickr:         
   tumblr:         
@@ -26,10 +26,10 @@ owner:
   google_plus:
 
 # Background image to be tiled on all pages
-background: 
+background:
 
 # Analytics and webmaster tools stuff goes here
-google_analytics:   
+google_analytics: UA-72306859-1  
 google_verify:      
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
 bing_verify:         
